VoltCore Phase 1: honest module registry, real perf tasks, live benchmark, plugin-pro loader (paperweight patch)